circumvent marquee `z-index` issue

--- a/assets/css/pages/_index.scss
+++ b/assets/css/pages/_index.scss
@@ -930,7 +930,7 @@
         @include media-breakpoint-up(lg) {
             width: rem(360);
             padding: rem(50) rem(30);
-            margin: rem(7.5);
+            margin: rem(12.5);
         }
 
         &:hover {
